# extinction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alias.sh  autocorrelation.py  autoregressive.py  averaged_density.py  figurateur.py  noise.py  one_f_beta_noise.py  oneoverf.py  pyproject.toml  requirements.txt  setup.py  test.py
binding/: CMakeLists.txt  distributions.cpp  ggx.cpp  test.cpp
binding/test/: CMakeLists.txt  cpu.cpp  cuda.cu  cuda.cuh  gpu.cpp  kernel.cu  kernel.cuh  kernel.hpp
bruteforce/: interface.cpp  kernel.cpp
data/: beckmann-sigma-0-25-0-25_0512-it-150.npy  ggx-sigma-0-25-0-25_0512-it-150.npy
extinction/: __init__.py  figurateur.py
extinction/bruteforce/: __init__.py  interface.cpp  kernel.cpp  kernel.hpp
extinction/extinction/: __init__.py  averaged_density.py  figurateur.py
extinction/extinction/noise/: autoregressive.py  oneoverf.py
extinction/test/: __init__.py
mfgeo/: __init__.py  autocorrelation.py  figurateur.py  sample.py
mfgeo/noise/: __init__.py  autoregressive.py  oneoverf.py
mfgeo/test/: __init__.py
test/: beta_asjusted.py  cpu_and_gpu.py  distributions.py  fit_to_b0.py  fit_to_smith.py  fourier_ggx.py  gaussian_copula.py  ggx.py  many_computational_test.py  many_smith.py  normalization.py  normalization_correlated.py  normalization_smith.py  path.py  phase_swap.py  plot_tested.py  sandbox.py  slope_distribution.py  slope_distribution_phase_limit.py  test.py  wiener-khinchin.py
test/phase_swap/: index.html  index.py
test/phaseswap/: phaseswap.py
test/render/: .gitignore  _path.py  align.py  cmap.py  compare.py  diff.py  heights.py  input_ac.py  render.py  sphere.blend  teaser.py
test/view-wiener-khinchin/: index.html  index.py
test/wiener-khinchin/: allclose.py  index.html  index.py
test/wk2d/: wk2d.py
visibility/: CMakeLists.txt  interface.cpp  kernel.cu  kernel.h  kernel.hpp
visibility/visibility/: __init__.py
